network_bk1.yml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  Env:
    Description: Environment
    Type: String
  System:
    Description: System Name
    Type: String
Resources:
  SystemVpc:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::VPC
    DeletionPolicy: Delete
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      InstanceTenancy: default
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${Env}--${System}--vpc
  SystemInternetGateway:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::InternetGateway
    DeletionPolicy: Delete
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${Env}--${System}--igw
  SystemVpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref SystemInternetGateway
      VpcId: !Ref SystemVpc
  PublicAp1ASubnet:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Subnet
    DeletionPolicy: Delete
    Properties:
      VpcId: !Ref SystemVpc
      MapPublicIpOnLaunch: false
      EnableDns64: false
      AvailabilityZoneId: apne1-az4
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: 10.0.0.0/20
      Ipv6Native: false
      Tags:
        - Key: Name
          Value: !Sub ${Env}--${System}--public--ap1a--sn
  PublicAp1CSubnet:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Subnet
    DeletionPolicy: Delete
    Properties:
      VpcId: !Ref SystemVpc
      MapPublicIpOnLaunch: false
      EnableDns64: false
      AvailabilityZoneId: apne1-az1
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: 10.0.16.0/20
      Ipv6Native: false
      Tags:
        - Key: Name
          Value: !Sub ${Env}--${System}--public--ap1c--sn
  SystemSg:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Delete
    Properties:
      GroupName: !Sub ${Env}--${System}--system--sg
      GroupDescription: !Sub ${Env}--${System}--system--sg
      VpcId: !Ref SystemVpc
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
        - IpProtocol: "-1"
          FromPort: -1
          SourceSecurityGroupId: !GetAtt SystemVpc.DefaultSecurityGroup
          ToPort: -1
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: "-1"
          FromPort: -1
          ToPort: -1
      Tags:
        - Key: Name
          Value: !Sub ${Env}--${System}--system--sg
  SystemRouteTable:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Delete
    Properties:
      VpcId: !Ref SystemVpc
      Tags:
        - Key: Name
          Value: !Sub ${Env}--${System}--system--rtb
  InternetGatewayRoute:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Route
    DeletionPolicy: Delete
    Properties:
      RouteTableId: !Ref SystemRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref SystemInternetGateway
  Ap1ASubnetRouteTableAssociation:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Delete
    Properties:
      RouteTableId: !Ref SystemRouteTable
      SubnetId: !Ref PublicAp1ASubnet
  Ap1CSubnetRouteTableAssociation:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Delete
    Properties:
      RouteTableId: !Ref SystemRouteTable
      SubnetId: !Ref PublicAp1CSubnet
  S3Endpoint:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::VPCEndpoint
    DeletionPolicy: Delete
    Properties:
      PrivateDnsEnabled: false
      IpAddressType: not-specified
      DnsOptions:
        PrivateDnsOnlyForInboundResolverEndpoint: NotSpecified
        DnsRecordIpType: not-specified
      ResourceConfigurationArn: ""
      SecurityGroupIds: []
      SubnetIds: []
      ServiceNetworkArn: ""
      VpcId: !Ref SystemVpc
      RouteTableIds: []
      ServiceName: com.amazonaws.ap-northeast-1.s3
      PolicyDocument:
        Version: "2008-10-17"
        Statement:
          - Resource: "*"
            Action: "*"
            Effect: Allow
            Principal: "*"
      VpcEndpointType: Gateway
      Tags:
        - Key: Name
          Value: !Sub ${Env}--${System}--vpce--s3
Outputs:
  SystemVpcId:
    Description: System VPC ID
    Value: !Ref SystemVpc
    Export:
      Name: !Sub ${AWS::StackName}--vpc
  SystemSgId:
    Description: System Security Group ID
    Value: !Ref SystemSg
    Export:
      Name: !Sub ${AWS::StackName}--system--sg
  PublicSubnetIds:
    Description: Public Subnet IDs
    Value: !Join [",", [!Ref PublicAp1ASubnet, !Ref PublicAp1CSubnet]]
    Export:
      Name: !Sub ${AWS::StackName}--public--subnet
